<resources>
    <string name="app_name">路演大侠</string>

    <string name="detail_bottom_share">分享</string>
    <string name="detail_bottom_like">点赞</string>
    <string name="detail_bottom_commit">评论</string>
    <string name="comment_expand">收起</string>

    <string name="actionbar_webview_share">分享到</string>
    <string name="actionbar_webview_cope">复制链接</string>
    <string name="actionbar_webview_open">打开链接</string>
    <string name="action_share">分享</string>

    <string name="about_addr">https://github.com/laotan7237/EasyReader</string>//项目地址
    <string name="about_author">作者:老坛</string>
    <string name="github_issues">您好，您有什么好的意见可以及时向我反馈，您可以在GitHub的Issues处说明问题原因，也可以通过以下方式联系我，我将根据情况尽量处理哦 ~</string>
    <string name="about_project">项目简介:\n易读,一个纯粹的阅读App\n该项目会持续迭代与优化,加入更丰富的内容与功能,并不断尝试最新的技术,欢迎star、fork、issue\n点击下面的项目链接给个star吧,您的star就是对我最大的支持。</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="data_loading">正在加载&#8230;</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="buy_num">购买数量</string>
    <string name="sure">确定</string>
    <string name="add">+</string>
    <string name="reduce">-</string>
    <string name="size">尺寸大小</string>
    <string name="color_type">颜色分类</string>
    <string name="default_num">1</string>
</resources>
