<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/bottom_product_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignWithParentIfMissing="true"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="140dp"
        android:background="@drawable/bottom_product_img" />

    <ImageView
        android:id="@+id/bottom_cha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="130dp"
        android:contentDescription="TODO"
        android:src="@mipmap/wc_sp_tc_cha" />

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="160dp"
        android:background="@drawable/bottom_product_content"
        android:orientation="vertical"
        android:translationZ="-40dp"
        tools:targetApi="lollipop">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="@dimen/dp_10"
            android:textColor="#333333"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/bottom_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="10dp"
            android:textColor="#F37505" />

        <TextView
            android:id="@+id/bottom_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="10dp"
            android:textColor="#A7A7A7" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="20dp"
            android:text="@string/color_type"
            android:textColor="#333333"
            android:textSize="@dimen/sp_14" />

        <LinearLayout
            android:id="@+id/color_lin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_13"
            android:layout_marginTop="24dp"
            android:text="@string/size"
            android:textColor="#333333"
            android:textSize="@dimen/sp_14" />

        <LinearLayout
            android:id="@+id/size_lin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_13"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/dp_13"
                android:layout_weight="5"
                android:gravity="start"
                android:text="@string/buy_num"
                android:textColor="#333333"
                android:textSize="@dimen/sp_14" />

            <Button
                android:id="@+id/reduce"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/reduce" />

            <Button
                android:id="@+id/buy_num"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/default_num" />

            <Button
                android:id="@+id/add_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="@dimen/dp_10"
                android:text="@string/add" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/bottom_ok"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/dp_15"
            android:background="#F37505"
            android:text="@string/sure"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>